third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/try_into/invalid_attr.rs
#[derive(derive_more::TryInto)]
#[try_into(foo)]
enum MixedData {
    Int(u32),
    String(String),
}

fn main() {}
